src/home/home.module.css
/* ... */
/* 
@media only screen and (max-width: 700px) {
  .eventsDescription .left p {
    font-size: 10px;
    margin-top: 7px; 
  }
} */

@media only screen and (max-width: 850px) {
  .publications {
    padding-top: 0px;
    padding-bottom: 30px;
  }

  .publications h1 {
    font-size: 9vw;
    /* padding-bottom: 15px; */
  }

  .publications .articlesDiv {
    margin-top: 15px;
  }

  .titleMobile h1 {
    display: contents;
    font-size: 9vw;
    padding-top: 50px;
  }
}

/* adjusting font size of carousel description  */

@media only screen and (max-width: 946px) {
  .eventsDescription .left p {
    font-size: 14px;
  }
}

@media only screen and (max-width: 500px) {
  .eventsDescription {
    max-width: 80%;
  }
}

@media only screen and (max-width: 990px) {
  .slide_component {
    height: 840px;
    display: flex;
    flex-direction: column;
    /* width: 100%; */
  }
}

@media only screen and (max-width: 700px) {
  .slide_component {
    height: 670px;
    /* padding-bottom: 0;  */
    /* width: 100%; */
  }

  .carousel {
    /* padding-right: 0; 
    padding-left: 0; 
    padding-bottom: 40px; */
    padding: 40px 0;
  }

  .carousel .buttonBack {
    margin-left: 25px;
  }

  .carousel .buttonNext {
    margin-right: 25px;
  }

  .carousel .buttonBack:disabled {
    margin-left: 50px;
  }

  .carousel .buttonNext:disabled {
    margin-right: 50px;
  }
}

/* adjusting button size and position
@media only screen and (max-width: 650px) {

  
} */

@media only screen and (max-width: 550px) {
  .slide_component {
    height: 600px;
    /* width: 100%; */
  }

  .carousel .buttonBack {
    border-top: 13px solid transparent;
    border-bottom: 13px solid transparent;
    border-right: 24px solid #313638;
    margin-left: 20px;
  }

  .carousel .buttonNext {
    border-top: 13px solid transparent;
    border-bottom: 13px solid transparent;
    border-left: 24px solid #313638;
    margin-right: 20px;
  }

  .carousel .buttonBack:disabled {
    border-right: 24px solid #c4c4c4;
    margin-left: 20px;
  }

  .carousel .buttonNext:disabled {
    border-left: 24px solid #c4c4c4;
    margin-right: 20px;
  }
}
/* 
.slide_component {
  display: contents; 
} */

/* add height: 250px to both class=Homecarousel and class=Horizontal Slider, remove max-height from class=SlideInner */

@media only screen and (max-width: 500px) {
  .number {
    bottom: 40%;
  }
}

/* Adjusting height of header and header decription */
@media only screen and (max-width: 736px) {
  .contain {
    height: 150vh;
  }

  div .headline {
    top: 50%;
  }
}

@media only screen and (max-width: 667px) {
  div .headline {
    top: 50%;
  }
}
@media only screen and (max-width: 568px) {
  div .headline {
    top: 40%;
  }
}

@media only screen and (max-width: 414px) {
  div .headline {
    top: 4%;
  }

  .contain {
    height: 66vh;
  }
}

@media only screen and (max-width: 391px) {
  div .headline {
    top: 5%;
  }

  .contain {
    height: 66vh;
  }
}

@media only screen and (max-width: 375px) {
  div .headline { 
    top: 1%;
  }
}

@media only screen and (max-width: 320px) {
  div .headline {
    top: -3.5%;
  }
}

